# eternix-testnet

./: Cargo.toml  README.md  genesis.json
src/: app.rs  config.rs  leader_selection.rs  main.rs  models.rs  p2p.rs  rpc.rs  ui.rs
src/app/: accounts.rs  consensus.rs  core.rs  mod.rs  network.rs  rpc_eth.rs  utils.rs
