[package]
name = "eternix-testnet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = "0.28"
rand = "0.8"
ratatui = "0.29"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
k256 = "0.13"
sha3 = "0.10"
rlp = "0.5"
